--- a/exemplo_16.css
+++ b/exemplo_16.css
@@ -1,6 +1,6 @@
-@import url("styles/headers.css");
-@import url("styles/box.css");
-@import url("styles/carrossel.css");
+@import url("img_16/headers.css");
+@import url("img_16/box.css");
+@import url("img_16/carrossel.css");
 
 :root {
     --cor-de-fundo: #e4e6e7;
