--- a/exemplo_11.css
+++ b/exemplo_11.css
@@ -6,7 +6,7 @@
 
 body{
    
-    background-image: url(img_11/tecnologia.png);
+    background-image: url(..img_11/tecnologia.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center; 
