--- a/exemplo_11.css
+++ b/exemplo_11.css
@@ -1,15 +1,10 @@
-/*.imagem-fundo{
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center; 
-}*/
-
-body{
-    background-image: url(img_11/tecnologia.png);
+.imagem-fundo{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center; 
 }
+
+
 
 
 
