--- a/exemplo_11.css
+++ b/exemplo_11.css
@@ -2,7 +2,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center; 
-    width: 100vw;
+    width: 100%;
     padding: 0 0px;
 }
 
