--- a/exemplo_1.css
+++ b/exemplo_1.css
@@ -148,7 +148,7 @@ input:checked ~ .menu-hamburguer-elements{
       width: 60%;
       height: 40%;
       background-color: rgba(10,10,10,.9);
-      position: absolute;
+     position: relative;
       left: -60%;
       top: 0;
   
