--- a/exemplo_1.css
+++ b/exemplo_1.css
@@ -143,7 +143,7 @@ input:checked ~ .menu-hamburguer-elements{
       z-index: 1;
       color: white
   }
-
+/*
   .menu-hamburguer-elements{
       width: 60%;
       height: 40%;
@@ -157,13 +157,13 @@ input:checked ~ .menu-hamburguer-elements{
       display: flex;
       align-items: center;
       flex-direction: column;
-      justify-content: left;
+      justify-content: center;
   
       padding-top: 15vh;
   
       z-index: -1;
   }
-
+*/
   .menu{
       display: flex;
       height: 60px;
